--- a/index.html
+++ b/index.html
@@ -1,31 +1,195 @@
-<!DOCTYPE html><html lang="en"><head>
-<meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Rimsha Maternity Centre</title><link rel="stylesheet" href="css/style.css"></head><body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CupX | Authentication</title>
+  <link rel="icon" href="/favicon.png" />
 
-<header class="header">
-  <a href="index.html" class="logo"><img src="assets/logo.svg" alt="Rimsha Maternity Centre"></a>
-  <nav class="nav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="services.html">Services</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-  <div class="hamburger" onclick="this.classList.toggle('active'); document.querySelector('.nav-dropdown').classList.toggle('show');">
-    <span></span><span></span><span></span>
-  </div>
-  <div class="nav-dropdown">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="services.html">Services</a>
-    <a href="contact.html">Contact</a>
-  </div>
-</header>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', sans-serif;
+    }
 
-<div class="container"><section class="hero">
-<h1>Compassionate care for mothers & newborns</h1>
-<p>Rimsha Maternity Centre provides full maternity, antenatal, delivery and postnatal care with experienced staff and modern facilities.</p>
-</section>
-<section><h2 style='color:var(--primary);margin:20px 0 10px;'>Our Services</h2>
-<ul><li>Ante-natal checkups</li><li>Normal & Caesarean deliveries</li><li>Postnatal care and breastfeeding support</li><li>Neonatal care and vaccinations</li></ul>
-</section>
-<footer class='footer'><div><strong>Address:</strong><br>Rimsha Maternity Centre, Phoolpur Road, Sikraur Sahbari Bazar, Azamgarh 202226</div><div><strong>Phone:</strong> +91 8009082218</div></footer></div></body></html>
+    body {
+      height: 100vh;
+      display: flex;
+      background: linear-gradient(135deg, #1f1c2c, #302b63, #24243e);
+      color: white;
+      overflow: hidden;
+    }
+
+    .left {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 40px;
+    }
+
+    .branding {
+      max-width: 500px;
+    }
+
+    .branding h1 {
+      font-size: 48px;
+      background: linear-gradient(90deg, #00f5a0, #00d9f5);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .branding p {
+      margin-top: 20px;
+      font-size: 18px;
+      opacity: 0.8;
+      line-height: 1.6;
+    }
+
+    .right {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: rgba(255, 255, 255, 0.05);
+      backdrop-filter: blur(15px);
+    }
+
+    .auth-box {
+      width: 350px;
+      padding: 40px;
+      border-radius: 20px;
+      background: rgba(255, 255, 255, 0.08);
+      backdrop-filter: blur(20px);
+      box-shadow: 0 10px 40px rgba(0,0,0,0.3);
+    }
+
+    .auth-box h2 {
+      text-align: center;
+      margin-bottom: 30px;
+      font-weight: 600;
+    }
+
+    .input-group {
+      margin-bottom: 20px;
+    }
+
+    .input-group input {
+      width: 100%;
+      padding: 12px 15px;
+      border-radius: 10px;
+      border: none;
+      outline: none;
+      background: rgba(255,255,255,0.1);
+      color: white;
+    }
+
+    .input-group input::placeholder {
+      color: rgba(255,255,255,0.6);
+    }
+
+    .btn {
+      width: 100%;
+      padding: 12px;
+      border: none;
+      border-radius: 10px;
+      background: linear-gradient(90deg, #00f5a0, #00d9f5);
+      color: black;
+      font-weight: 600;
+      cursor: pointer;
+      transition: 0.3s ease;
+    }
+
+    .btn:hover {
+      transform: scale(1.05);
+    }
+
+    .toggle {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 14px;
+      opacity: 0.8;
+      cursor: pointer;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    @media (max-width: 900px) {
+      body {
+        flex-direction: column;
+      }
+
+      .left {
+        display: none;
+      }
+
+      .right {
+        flex: 1;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <div class="left">
+    <div class="branding">
+      <h1>CupX</h1>
+      <p>
+        Build. Launch. Scale.  
+        Join the ecosystem of students and creators building real-world tech.
+      </p>
+    </div>
+  </div>
+
+  <div class="right">
+    <div class="auth-box">
+
+      <!-- Sign In -->
+      <div id="signin">
+        <h2>Sign In</h2>
+        <div class="input-group">
+          <input type="email" placeholder="Email address" />
+        </div>
+        <div class="input-group">
+          <input type="password" placeholder="Password" />
+        </div>
+        <button class="btn">Sign In</button>
+        <div class="toggle" onclick="toggleForm()">
+          Don't have an account? Sign Up
+        </div>
+      </div>
+
+      <!-- Sign Up -->
+      <div id="signup" class="hidden">
+        <h2>Create Account</h2>
+        <div class="input-group">
+          <input type="text" placeholder="Full Name" />
+        </div>
+        <div class="input-group">
+          <input type="email" placeholder="Email address" />
+        </div>
+        <div class="input-group">
+          <input type="password" placeholder="Password" />
+        </div>
+        <button class="btn">Sign Up</button>
+        <div class="toggle" onclick="toggleForm()">
+          Already have an account? Sign In
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <script>
+    function toggleForm() {
+      document.getElementById("signin").classList.toggle("hidden");
+      document.getElementById("signup").classList.toggle("hidden");
+    }
+  </script>
+
+</body>
+  </html>
