--- a/index.html
+++ b/index.html
@@ -3,193 +3,136 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CupX | Authentication</title>
-  <link rel="icon" href="/favicon.png" />
+
+  <title>Login | CupX Corporation</title>
+  <meta name="description" content="Login portal for CupX Corporation tools and services." />
 
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', sans-serif;
-    }
-
     body {
-      height: 100vh;
-      display: flex;
-      background: linear-gradient(135deg, #1f1c2c, #302b63, #24243e);
-      color: white;
-      overflow: hidden;
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #0f172a;
+      color: #e5e7eb;
     }
 
-    .left {
-      flex: 1;
+    /* Header */
+    header {
+      background: #020617;
+      padding: 20px 25px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    header a {
+      color: #38bdf8;
+      text-decoration: none;
+      font-size: 14px;
+    }
+
+    /* Centering wrapper */
+    .page {
+      min-height: calc(100vh - 64px);
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 40px;
     }
 
-    .branding {
-      max-width: 500px;
-    }
-
-    .branding h1 {
-      font-size: 48px;
-      background: linear-gradient(90deg, #00f5a0, #00d9f5);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-
-    .branding p {
-      margin-top: 20px;
-      font-size: 18px;
-      opacity: 0.8;
-      line-height: 1.6;
-    }
-
-    .right {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(15px);
-    }
-
-    .auth-box {
-      width: 350px;
-      padding: 40px;
-      border-radius: 20px;
-      background: rgba(255, 255, 255, 0.08);
-      backdrop-filter: blur(20px);
-      box-shadow: 0 10px 40px rgba(0,0,0,0.3);
-    }
-
-    .auth-box h2 {
-      text-align: center;
-      margin-bottom: 30px;
-      font-weight: 600;
-    }
-
-    .input-group {
-      margin-bottom: 20px;
-    }
-
-    .input-group input {
+    .login-box {
+      background: #020617;
+      padding: 30px;
       width: 100%;
-      padding: 12px 15px;
-      border-radius: 10px;
+      max-width: 360px;
+      border-radius: 8px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 5px;
+    }
+
+    p {
+      text-align: center;
+      font-size: 14px;
+      opacity: 0.85;
+      margin-bottom: 25px;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 6px;
+      font-size: 14px;
+    }
+
+    input {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 18px;
+      border-radius: 4px;
       border: none;
       outline: none;
-      background: rgba(255,255,255,0.1);
-      color: white;
-    }
-
-    .input-group input::placeholder {
-      color: rgba(255,255,255,0.6);
-    }
-
-    .btn {
-      width: 100%;
-      padding: 12px;
-      border: none;
-      border-radius: 10px;
-      background: linear-gradient(90deg, #00f5a0, #00d9f5);
-      color: black;
-      font-weight: 600;
-      cursor: pointer;
-      transition: 0.3s ease;
-    }
-
-    .btn:hover {
-      transform: scale(1.05);
-    }
-
-    .toggle {
-      text-align: center;
-      margin-top: 20px;
       font-size: 14px;
-      opacity: 0.8;
+    }
+
+    button {
+      width: 100%;
+      padding: 10px;
+      background: #38bdf8;
+      border: none;
+      border-radius: 4px;
+      font-size: 15px;
+      font-weight: bold;
       cursor: pointer;
     }
 
-    .hidden {
-      display: none;
+    button:hover {
+      background: #0ea5e9;
     }
 
-    @media (max-width: 900px) {
-      body {
-        flex-direction: column;
-      }
+    .note {
+      margin-top: 18px;
+      font-size: 13px;
+      text-align: center;
+      opacity: 0.7;
+    }
 
-      .left {
-        display: none;
-      }
-
-      .right {
-        flex: 1;
-      }
+    a {
+      color: #38bdf8;
+      text-decoration: none;
     }
   </style>
 </head>
+
 <body>
 
-  <div class="left">
-    <div class="branding">
-      <h1>CupX</h1>
-      <p>
-        Build. Launch. Scale.  
-        Join the ecosystem of students and creators building real-world tech.
-      </p>
+<header>
+  <strong>CupX Corporation</strong>
+  <a href="index.html">← Back to Home</a>
+</header>
+
+<div class="page">
+  <div class="login-box">
+    <h1>CupX Login</h1>
+    <p>Access CupX tools & services</p>
+
+    <form>
+      <label>Email</label>
+      <input type="email" placeholder="you@cupx.in" disabled>
+
+      <label>Password</label>
+      <input type="password" placeholder="••••••••" disabled>
+
+      <button type="button">Login</button>
+    </form>
+
+    <div class="note">
+      Login system is under development.<br>
+      For now, contact us at
+      <a href="mailto:info@cupx.in">info@cupx.in</a>
     </div>
   </div>
-
-  <div class="right">
-    <div class="auth-box">
-
-      <!-- Sign In -->
-      <div id="signin">
-        <h2>Sign In</h2>
-        <div class="input-group">
-          <input type="email" placeholder="Email address" />
-        </div>
-        <div class="input-group">
-          <input type="password" placeholder="Password" />
-        </div>
-        <button class="btn">Sign In</button>
-        <div class="toggle" onclick="toggleForm()">
-          Don't have an account? Sign Up
-        </div>
-      </div>
-
-      <!-- Sign Up -->
-      <div id="signup" class="hidden">
-        <h2>Create Account</h2>
-        <div class="input-group">
-          <input type="text" placeholder="Full Name" />
-        </div>
-        <div class="input-group">
-          <input type="email" placeholder="Email address" />
-        </div>
-        <div class="input-group">
-          <input type="password" placeholder="Password" />
-        </div>
-        <button class="btn">Sign Up</button>
-        <div class="toggle" onclick="toggleForm()">
-          Already have an account? Sign In
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-  <script>
-    function toggleForm() {
-      document.getElementById("signin").classList.toggle("hidden");
-      document.getElementById("signup").classList.toggle("hidden");
-    }
-  </script>
+</div>
 
 </body>
-  </html>
+</html>
